--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.52.0",
+    "@types/crypto-js": "^4.2.2",
+    "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "react": "18.3.1",
-    "react-native": "0.75.1"
+    "react-hook-form": "^7.52.1",
+    "react-native": "0.75.1",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +40,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "5.0.4"
   },
   "engines": {
