--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-hook-form": "^7.52.1",
     "react-native": "0.75.1",
@@ -43,6 +44,7 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "socket.io-client": "^4.6.1",
+    "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
