--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "android:dev": "ENVFILE=.env.dev react-native run-android",
+    "android:prod": "ENVFILE=.env.prod react-native run-android",
     "test": "jest"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.52.1",
     "react-native": "0.75.1",
+    "react-native-config": "^1.5.3",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
