--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-native": "0.75.1",
+    "react-native": "^0.75.2",
     "react-native-config": "^1.5.3",
     "react-native-svg": "^15.6.0",
     "react-redux": "^8.1.0",
