--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tamagui/config": "^1.109.5",
     "@tamagui/lucide-icons": "^1.109.5",
     "@tanstack/react-query": "^5.52.0",
@@ -27,14 +28,13 @@
     "react-hook-form": "^7.52.1",
     "react-native": "^0.75.2",
     "react-native-config": "^1.5.3",
+    "react-native-mmkv": "^3.0.2",
     "react-native-svg": "^15.6.0",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
     "tamagui": "^1.109.5",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
